Terminado exercicio sobre a hora

--- a/cursojs/desafios/estilo.css
+++ b/cursojs/desafios/estilo.css
@@ -1,5 +1,5 @@
 body {
-background-color: rgb(155, 155, 255);
+background-color: rgb(91, 84, 219);
 font-family: Arial, Helvetica, sans-serif;
 }
 header {
@@ -14,6 +14,20 @@ section {
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.377);
 }
+
+div#msg {
+    text-align: center;
+}
+
+div#foto > img{
+   border-radius: 50% 50% 50% 50%;
+   width: 320px;
+   height: 320px;
+   display: block;
+   margin: auto;
+   padding: 10px;
+}
+
 footer {
 color: white;
 text-align: center;
