--- a/cursojs/trabalho do rafa/style.css
+++ b/cursojs/trabalho do rafa/style.css
@@ -6,8 +6,8 @@
 
 body {
     background-color: rgb(255, 255, 255);
-    margin: 0px;
     text-align: center;
+    margin: 0px;
 }
 header > h1 {
     margin: auto;
@@ -19,22 +19,35 @@ header > h1 {
 header {
     height: 200px;
     background-color: antiquewhite;
-    font-family: ;
+    margin: 0px 0px 47px 0px;
 }
 nav {
     position: relative;
-    right: 680px;
+    right: 487px;
     top: 30px;
+    display: block;
+    
+}
+nav > a {
+    padding: 0px 45px 0px 34px;
+    background-color: aquamarine;
+    text-align: center;
 }
 main {
-    height: 730px;
-    width: 730px;
+    margin: 10px 10px 10px 10px;
     background-color: rgba(0, 0, 0, 0.377);
     text-align: center;
     margin: auto;
+    min-width: 300px;
+    max-width: 1394px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
-main > div > p {
+main > p {
     margin: 0px;
+    padding: 100px 0px 100px 0px;
 } 
 footer {
     height: 58px;
