--- a/cursojs/trabalho do rafa/style.css
+++ b/cursojs/trabalho do rafa/style.css
@@ -13,13 +13,16 @@ header > h1 {
     margin: auto;
     font-family: mont;
     font-weight: 500;
-    width: 800px;
+    max-width: 800px;
     padding-top: 20px;
 }
 header {
     height: 200px;
     background-color: antiquewhite;
-    margin: 0px 0px 47px 0px;
+    margin-bottom: 47px;
+    min-width: 300px;
+    
+    text-align: center;
 }
 nav {
     position: relative;
