--- a/cursojs/trabalho do rafa/style.css
+++ b/cursojs/trabalho do rafa/style.css
@@ -6,15 +6,15 @@
 
 body {
     background-color: rgb(255, 255, 255);
-    text-align: center;
     margin: 0px;
 }
 header {
     height: 200px;
-    background-color: antiquewhite;
+    background-image: linear-gradient(to bottom, #057cc7, #049DD9);
     margin-bottom: 47px;
     min-width: 300px;
     text-align: center;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
 }
 header > h1 {
     margin: auto;
@@ -26,24 +26,37 @@ header > h1 {
 header > p {
     font-size: 1.5em;
     margin: auto;
-}
-
-nav {
-    position: relative;
-    right: 518px;
-    top: 77px;
-    display: block;
     
 }
-nav > a {
-    padding: 0px 45px 0px 34px;
-    background-color: aquamarine;
+nav#box {
+    position: relative;
+    right: 491px;
+    top: 73px;
+    display: block;
+    margin: auto;
+    max-width: 1000px;
+    
+}
+nav#box > a {
+    padding: 10px 28px 19px 34px;
     text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: 1s;
+    color: black;
+    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.349);
+}
+nav#box > a:hover {
+    background-color: #0367A6;
+    color: #00b7ff;
+}
+@media screen (max-width: 1000px){
+    nav#box{display: none;}
 }
 main {
     margin: 10px 10px 10px 10px;
-    background-color: rgba(0, 0, 0, 0.377);
-    text-align: center;
+    background-color: #049DD9;
     margin: auto;
     min-width: 300px;
     max-width: 1394px;
@@ -52,9 +65,15 @@ main {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
-main > p {
-    margin: 0px;
-    padding: 100px 0px 100px 0px;
+section > h1 {
+    text-align: left;
+}
+section > p {
+    font-family: mont;
+    font-size: 1.5em;
+    text-align: justify;
+
+
 } 
 footer {
     height: 58px;
