--- a/cursojs/trabalho do rafa/estilos/style.css
+++ b/cursojs/trabalho do rafa/estilos/style.css
@@ -28,6 +28,9 @@ header > p {
     margin: auto;
     
 }
+div#menu {
+    margin: auto;
+}
 nav#box {
     position: relative;
     right: 487px;
@@ -43,7 +46,7 @@ nav#box > a {
     text-decoration: none;
     font-weight: bold;
     transition-duration: 1s;
-    color: black;
+    color: rgb(0, 0, 0);
     box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.349);
 }
 nav#box > a:hover {
@@ -52,7 +55,6 @@ nav#box > a:hover {
 }
 
 main {
-    margin: 10px 10px 10px 10px;
     background-color: #049DD9;
     margin: auto;
     min-width: 300px;
