--- a/cursojs/trabalho do rafa/estilos/style.css
+++ b/cursojs/trabalho do rafa/estilos/style.css
@@ -32,6 +32,9 @@ main {
 img#foto02 {
     max-width: 100%;
     border-radius: 20px;
+    box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.404);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section#s1 {
     text-align: center;
