--- a/cursojs/trabalho do rafa/estilos/style.css
+++ b/cursojs/trabalho do rafa/estilos/style.css
@@ -1,5 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
 
 body {
     background-color: rgb(255, 255, 255);
@@ -12,13 +13,24 @@ header {
     min-width: 300px;
     text-align: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
-    padding-top: 10px;
+    padding: 10px;
 }
 img#foto1 {
     height: 100px;
     position: relative;
     right: 661px;
 } 
+h1#nome {
+    position: absolute;
+    left: 600px;
+    top: 25px;
+    font-family: "Cookie", cursive;
+    font-size: 30px;
+    background-color: white;
+    border-radius: 50px;
+    padding: 20px;
+    margin: auto;  
+}
 main {
     background-color: #049DD9;
     margin: auto;
@@ -30,7 +42,6 @@ main {
     border-top-right-radius: 20px;
 }
 section#s1 {
-    text-align: center;
     background-image: url('../imagens/foto-bb-2.jpg');
     height: 600px;
     max-width: 1000px;
@@ -40,7 +51,17 @@ section#s1 {
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.527);
     background-attachment: fixed;
 }
-div {
+section#s1:after {
+    content: "";
+    height: 600px;
+    width: 1000px;
+    position: absolute;
+    z-index: 8;
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0, rgba(0,0,0,0) 40%, #000000d0 100% );
+    margin: auto;
+    border-radius: 20px;
+}
+div#titulo {
     background-color: rgba(0, 0, 0, 0.534);
     color: white;
     max-width: 1000px;
@@ -78,8 +99,11 @@ section > p {
 }
 footer {
     height: 58px;
-    background-color: #0385b8;
+    background-image: linear-gradient(to bottom, #057cc7, #049DD9 );
     border-radius: 20px 20px 0px 0px;
     text-align: center;
+    font-family: "Cookie", cursive;
+    font-size: 35px;
+    padding: 20px;
 
 }
