--- a/cursojs/trabalho do rafa/estilos/style.css
+++ b/cursojs/trabalho do rafa/estilos/style.css
@@ -7,7 +7,6 @@ body {
     margin: 0px;
 }
 header {
-    height: 120px;
     background-image: linear-gradient(to bottom, #057cc7, #049DD9);
     margin-bottom: 47px;
     min-width: 300px;
@@ -21,16 +20,14 @@ img#foto1 {
     right: 661px;
 } 
 h1#nome {
-    position: absolute;
-    left: 600px;
-    top: 25px;
+    margin: auto;
     font-family: "Cookie", cursive;
-    font-size: 30px;
+    max-width: 500px;
     background-color: white;
     border-radius: 50px;
-    padding: 20px;
-    margin: auto;  
-}
+    padding: 10px;  
+    
+} 
 main {
     background-color: #049DD9;
     margin: auto;
