--- a/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
+++ b/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
@@ -4,14 +4,6 @@
         position: relative;
         right: 185px;
     }
-
-}
-@media screen and (min-width: 1024px){
-    img#foto1 {
-        height: 100px;
-        position: relative;
-        right: 438px;
-    }
 }
 @media screen and (max-width: 1060px){
     section#s1:after {
@@ -19,6 +11,12 @@
     }
         footer {
         border-radius: 0px;
+    }
+    h1#nome {
+        position: relative;
+        left: 50px;
+        bottom: 60px;
+        width: 300px;
     }
 }
 @media screen and (min-width: 1420px) {
