--- a/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
+++ b/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
@@ -2,7 +2,7 @@
     img#foto1 {
         height: 100px;
         position: relative;
-        right: 185px;
+        right: 68px;
     }
 }
 @media screen and (max-width: 1060px){
@@ -12,18 +12,19 @@
         footer {
         border-radius: 0px;
     }
-    h1#nome {
+}
+@media screen and (min-width: 1000px) {
+    img#foto1 {
+        height: 100px;
         position: relative;
-        left: 50px;
-        bottom: 60px;
-        width: 300px;
+        right: 300px;
     }
 }
 @media screen and (min-width: 1420px) {
     img#foto1 {
         height: 100px;
         position: relative;
-        right: 640px;
+        right: 570px;
     }
 }
 @media screen and (min-width: 1900px) {
