--- a/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
+++ b/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
@@ -4,6 +4,10 @@
         position: relative;
         right: 68px;
     }
+    img#des {
+        position: relative;
+        left: 40px;
+    }
 }
 @media screen and (max-width: 1060px){
     section#s1:after {
