Media query atualizada

--- a/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
+++ b/cursojs/trabalho do rafa/estilos/tela-p-resolu.css
@@ -1,3 +1,8 @@
+@media screen and (min-width: 300px) {
+    img#des {
+        width: 100%;
+    }
+}
 @media screen and (min-width: 500px) {
     img#foto1 {
         height: 100px;
