--- a/cursojs/trabalho do rafa/estilos/style.css
+++ b/cursojs/trabalho do rafa/estilos/style.css
@@ -76,6 +76,11 @@ section {
 p#p2 {
     text-align: left;
 }
+p#verde {
+    color: rgb(30, 255, 0);
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+}
 footer {
     height: 58px;
     background-image: linear-gradient(to bottom, #057cc7, #049DD9 );
